--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>farjana portfolio</title>
-    <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange">Farjana Akter</span> World!</h1>
+            <h3>Introduce Myself..</h3>
+            <p>My name is farjana..I am from chittagong...I am a student.I am a student of master's.I like to
+                travelling
+                historical place...Last year i went lalbag kella with my parents.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/nature.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
