--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             <img src="images/nature.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/nature.jpe" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Bcome a web developer</h3>
+            <p>I want to become a web developer...I already learned html and css..I can build simple website..I want to
+                iearn everything about web development..</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
